fixed z-index of home button

--- a/app/assets/stylesheets/components/_home_page.scss
+++ b/app/assets/stylesheets/components/_home_page.scss
@@ -187,7 +187,7 @@ li.sample-artist:hover div.play-button-image {
 
 .video-container button {
   position: relative;
-  z-index: 5;
+  z-index: 0;
   top: 380px;
 }
 
@@ -206,4 +206,5 @@ li.sample-artist:hover div.play-button-image {
   width: 100%;
   height: 500px;
   background: rgba(0,0,0,0.5);
+  z-index: -1;
 }
